rename rights to permissions
